# cgalabc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cgalabc.cpp  cgalabc.hpp  main.cpp
resources/sample_models/: spyro.mtl
src/: Algo2d.cpp  Algo2d.h  Algo3d.cpp  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Camera.cpp  Camera.h  CatmullRomCurve.cpp  CatmullRomCurve.h  Curve2d.cpp  Curve2d.h  Light.cpp  Line2d.cpp  Line2d.h  Material.cpp  Mesh.cpp  Mesh.h  Playground.cpp  Point2d.cpp  Point2d.h  Polygon.cpp  Polygon.h  Pose.cpp  Renderer.cpp  Shader.cpp  ShadowCast.cpp  Utility.cpp  cgalabc.cpp  cgalabc.hpp  main.cpp  omptest.cpp  tinyOBJLoader.cpp  type.cpp  type.h
src/include/: Algo2d.h  Algo3d.h  BezierCurve.h  Camera.h  CatmullRomCurve.h  Curve2d.h  Light.h  Line2d.h  Material.h  Mesh.h  Polygon.h  Pose.h  Renderer.h  Shader.h  Utility.h  type.h
test/: CMakeLists.txt  TestAlgo2d.cpp  TestCamera.cpp  TestCurve.cpp  TestLight.cpp  TestLine2d.cpp  TestMesh.cpp  TestPoint2d.cpp  TestPolygon2d.cpp  TestPose.cpp  TestUtility.cpp
test/resource/: cube.mtl
